--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image
   bio              : "AHDL Assistant Researcher"
   location         : "South Korea"
-  email            : "yaej@yonsei.ac.kr"
+  email            : #"yaej@yonsei.ac.kr"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
