--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  : <meta name="naver-site-verification" content="ae4370d24d9a7bbcb324e61c65a2dddbd6961be1" />
+naver_site_verification  : "ae4370d24d9a7bbcb324e61c65a2dddbd6961be1"
 yandex_site_verification :
 baidu_site_verification  :
 
